more research for async

--- a/project/bin/dune
+++ b/project/bin/dune
@@ -1,4 +1,5 @@
 (executable
  (public_name project)
  (name app)
- (libraries project async))
+ (libraries project async)
+ (preprocess (pps ppx_let )))
