--- a/kanpilot.toml
+++ b/kanpilot.toml
@@ -10,7 +10,7 @@ name = "To Do"
   id = "task1"
   title = "Define project structure and file handling approach"
   description = "Define how files will be read, processed, and how errors will be handled."
-  tag = "backlog"
+  tag = "in-progress"
   linkFiles = [ ]
   dueDate = ""
   checkList = [ "Create main file-processing logic", "Handle errors gracefully" ]
@@ -51,7 +51,7 @@ name = "Done"
   id = "task4"
   title = "Testing file processing and error handling"
   description = "Test the file processing logic, including error handling and concurrent reading."
-  tag = "done"
+  tag = "in-progress"
   linkFiles = [ ]
   dueDate = "2024-11-05"
   checkList = [ "Test file reading with large files", "Test error scenarios (e.g., missing files)" ]
